--- a/bts.html
+++ b/bts.html
@@ -54,7 +54,7 @@
           <ul class="other">
             <li class="e-paper"><a href="#">訂閱電子報</a></li>
             <li class="sign"><a href="#">登入/註冊</a></li>
-            <li class="car"><a href="#"><img class="shopcar" src="img/shopcar.ico"><span>0個商品</span></a></li>
+            <li class="car"><a href="#"><img class="shopcar" src="shopcar.ico"><span>0個商品</span></a></li>
           </ul>
         </span>
        </div>
